--- a/language/templates/teacher.html
+++ b/language/templates/teacher.html
@@ -183,7 +183,7 @@
             <li class="nav-item"><a class="nav-link" href="{% url 'teacher' %}"><i class="nav-icon cil-home"></i> INÍCIO</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'enviar_videos' %}"><i class="nav-icon cil-education"></i> AULAS</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'enviar_materiais' %}"><i class="nav-icon cil-folder"></i> MATERIAIS</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="nav-icon cil-equalizer"></i> ESTÚDIO <span class="badge bg-warning btn-sm">Breve</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="nav-icon cil-user"></i> ALUNOS</a></li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="nav-icon cil-video"></i> LIVE <span class="badge bg-warning btn-sm">Breve</span></a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'portugues' %}"><i class="nav-icon cil-zoom-in"></i> Estudante</a></li>
             <li class="nav-item mt-auto"><a class="nav-link" href="#"><i class="nav-icon cil-info"></i> AJUDA</a></li>
