--- a/language/templates/materiais.html
+++ b/language/templates/materiais.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 
+{% block title %}Materiais de apoio{% endblock %}
+
 {% block content %}
-<div class="container mt-5">
-    <h1 class="mb-4">Materiais de Apoio</h1>
+<div class="col">
+    <h2 class="display-4">Materiais de apoio para download</h2>
 
     <!-- Lista de Materiais Disponíveis -->
     <div class="card">
         <div class="card-body">
-            <h2 class="card-title">Materiais para Download</h2>
             <table class="table">
                 <thead>
                     <tr>
