--- a/language/templates/praticar.html
+++ b/language/templates/praticar.html
@@ -4,24 +4,8 @@
 
 {% block content %}
 {% load static %}
-<div class="container mt-5">
-  <div class="row mb-4">
-    <div class="col-md-12">
-        <div id="carouselExampleCaptions" class="carousel slide rounded" data-bs-ride="carousel" style="height: 23vh; overflow: hidden;">
-        
-            <div class="carousel-inner h-100">
-                <!-- Slide 1 -->
-                <div class="carousel-item active h-100">
-                    <img src="{% static 'images/green3.jpg' %}" class="d-block w-100 h-100" alt="Slide 1" style="object-fit: cover;">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>Divirta-se e teste os seus conhecimentos!</h1>
-                    </div>
-                </div>
-                <!-- Slide 2 -->
-            </div>
-        </div>
-    </div>
-  </div>
+<div class="col">
+  <h2 class="display-4">Teste os seus conhecimentos!</h2>
   <div class="row">
     <!-- Card de Flashcards -->
     <div class="col-md-4">
